// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileHeader Component Snapshot Stability renders consistently with different names and locations 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#F5F5F5",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 16,
      "paddingVertical": 24,
    }
  }
>
  <View
    style={
      {
        "position": "relative",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#D4D4D4",
          "borderRadius": 50,
          "height": 100,
          "width": 100,
        }
      }
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "marginLeft": 16,
      }
    }
  >
    <Text
      style={
        {
          "color": "#171717",
          "fontSize": 24,
          "fontWeight": "600",
          "marginBottom": 8,
        }
      }
    >
      Alice Johnson
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <View
        accessibilityLabel="Icon: location, size: 16, color: #737373"
        testID="ionicon-location"
      />
      <Text
        style={
          {
            "color": "#737373",
            "fontSize": 14,
          }
        }
      >
        San Francisco, CA
      </Text>
    </View>
  </View>
</View>
`;

exports[`ProfileHeader Component Snapshot Stability renders consistently with edit button 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#F5F5F5",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 16,
      "paddingVertical": 24,
    }
  }
>
  <View
    style={
      {
        "position": "relative",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#D4D4D4",
          "borderRadius": 50,
          "height": 100,
          "width": 100,
        }
      }
    />
    <TouchableOpacity
      onPress={[MockFunction]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#10B981",
          "borderRadius": 8,
          "bottom": 0,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <View
        accessibilityLabel="Icon: pencil, size: 14, color: #FFFFFF"
        testID="ionicon-pencil"
      />
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 12,
            "fontWeight": "600",
          }
        }
      >
        Edit
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "flex": 1,
        "marginLeft": 16,
      }
    }
  >
    <Text
      style={
        {
          "color": "#171717",
          "fontSize": 24,
          "fontWeight": "600",
          "marginBottom": 8,
        }
      }
    >
      John Smith
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <View
        accessibilityLabel="Icon: location, size: 16, color: #737373"
        testID="ionicon-location"
      />
      <Text
        style={
          {
            "color": "#737373",
            "fontSize": 14,
          }
        }
      >
        New York, NY
      </Text>
    </View>
  </View>
</View>
`;

exports[`ProfileHeader Component Snapshot Stability renders consistently without edit button 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#F5F5F5",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 16,
      "paddingVertical": 24,
    }
  }
>
  <View
    style={
      {
        "position": "relative",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#D4D4D4",
          "borderRadius": 50,
          "height": 100,
          "width": 100,
        }
      }
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "marginLeft": 16,
      }
    }
  >
    <Text
      style={
        {
          "color": "#171717",
          "fontSize": 24,
          "fontWeight": "600",
          "marginBottom": 8,
        }
      }
    >
      John Smith
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <View
        accessibilityLabel="Icon: location, size: 16, color: #737373"
        testID="ionicon-location"
      />
      <Text
        style={
          {
            "color": "#737373",
            "fontSize": 14,
          }
        }
      >
        New York, NY
      </Text>
    </View>
  </View>
</View>
`;
